--- a/css/main.css
+++ b/css/main.css
@@ -950,7 +950,7 @@ body .wrapper .section6-box__block2 {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  gap: 225px;
+  gap: 287px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1050,6 +1050,82 @@ body .wrapper .section6-box1__block2-textbox-text {
   line-height: normal;
 }
 body .wrapper .section6-box2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 97px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: #8E96EA;
   border-radius: 44px;
+  padding: 32px;
+}
+body .wrapper .section6-box2__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 222px;
+}
+body .wrapper .section6-box2__content-textbox {
+  border-radius: 44px;
+  border: 1px solid #FEFEFF;
+  padding: 6px 16px;
+}
+body .wrapper .section6-box2__content-textbox-text {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+  color: #FEFEFF;
+}
+body .wrapper .section6-box2__imgbox {
+  border-radius: 44px;
+  border: 2.5px solid #FEFEFF;
+  background-color: #5251EC;
+  padding: 12px;
+}
+body .wrapper .section6-box2__textbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 12px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+body .wrapper .section6-box2__textbox-text1 {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: normal;
+  color: #FEFEFF;
+}
+body .wrapper .section6-box2__textbox-text2 {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+  color: #FEFEFF;
 }
